# kanban-app

./: .gitignore  .travis.yml  Makefile  board.xml  meson.build
data/: kanban-app.gresource.xml  kanban-data-template.xml  window.ui
src/: command-line-handler.c  command-line-handler.h  exampleapp.c  exampleapp.h  kanban-app-win.c  kanban-app-win.h  kanban-app.c  kanban-app.h  kanban-application.c  kanban-application.h  kanban-utils.c  kanban-utils.h  main.c
src/kanban-presenters/: kanban-app.c  kanban-app.h  kanban-application.c  kanban-application.h  presenter-view-interface.h
src/kanban-views/: kanban-app-win.c  kanban-app-win.h  kanban-window.c  kanban-window.h
src/models/: kanban-cards.c  kanban-cards.h  kanban-data.c  kanban-data.h  model-presenter-interface.c  model-presenter-interface.h
src/presenters/: kanban-application.c  kanban-application.h  kanban-board-observer-interface.c  kanban-board-observer-interface.h  kanban-board-presenter.c  kanban-board-presenter.h  kanban-card-viewmodel.c  kanban-card-viewmodel.h  kanban-column-observable-interface.c  kanban-column-observable-interface.h  kanban-column-store.c  kanban-column-store.h  kanban-column-viewer-interface.c  kanban-column-viewer-interface.h  kanban-column-viewmodel.c  kanban-column-viewmodel.h  kanban-list-store.c  kanban-list-store.h  kanban-list-viewer-interface.c  kanban-list-viewer-interface.h  kanban-tree-store.c  kanban-tree-store.h  model-observer-interface.h  model-observer.c  model-observer.h  presenter-view-interface.h
src/views/: board.css  board.ui  card.ui  column.ui  kanban-app.gresource.xml  kanban-board-view.c  kanban-board-view.h  kanban-column-view.c  kanban-column-view.h  kanban-grid.c  kanban-grid.h  kanban-list-box.c  kanban-list-box.h  kanban-window.c  kanban-window.h  window.ui
tests/: application-entry-tests.cpp  check-gtest-working-test.cpp  kanban-board-observer-interface-tests.cpp  kanban-board-presenter-tests.cpp  kanban-board-view-tests.cpp  kanban-card-viewmodel-tests.cpp  kanban-column-observable-interface-tests.cpp  kanban-column-store-tests.cpp  kanban-column-view-tests.cpp  kanban-column-viewer-interface-tests.cpp  kanban-column-viewmodel-tests.cpp  kanban-list-store-tests.cpp  meson.build  model-observer-tests.cpp  presenters-cards-intergration-tests.cpp  presenters-intergration-tests.cpp  presenters-views-intergration-tests.cpp
